Revision history for {{$dist->name}}

{{$NEXT}}

0.80      2014-07-22 06:50:13 -0400
  - promote to production

0.79_02   2014-07-19 11:44:10 -0400
  - identical release new version

0.79_01   2014-07-18 11:05:26 -0400
  - added optional callback to run method to allow per-execute callback to
    be called just before on_start.

0.79      2014-04-19 08:25:02 -0400
  - migrate from MakeMaker to Module::Build
  - documentation tweaks

0.78      2014-03-20 18:15:47 -0400
  - on_start event now gets program and arguments passed to the run method

0.77      2014-03-20 17:55:47 -0400
  - on_error event now gets program and arguments passed to the run method
  - add user attribute on AnyEvent::Open3::Simple::Process

0.76      2014-03-18 12:04:18 -0400
  - deprecate stdin attribute for AnyEvent::Open3::Simple
  - optionally pass whole content stdin to run method instead

0.75      2013-09-17 07:54:01 -0400
  - add stdin attribute for AnyEvent::Open3::Simple

0.74      2013-09-12 06:10:50 -0400
  - skip raw support testing on all platforms

0.73      2013-09-10 14:08:24 -0400
  - perl 5.8 support fixes

0.72      2013-09-09 08:20:35 -0400
  - marking raw support as experiementalo
    https://github.com/plicease/AnyEvent-Open3-Simple/issues/6
  - undocumented (and experimental): on_stderr and on_stdout can be list ref

0.71      2013-09-03 15:19:59 -0400
  - fixed raw support

0.70      2013-09-03 12:39:38 -0400
  - promote to production

0.69_02   2013-09-01 14:25:50 -0400
  - add prereq EV on MSWin32

0.69_01   2013-08-31 20:28:03 -0400
  - experimental perl 5.8 support
  - added optional raw attribute to constructor

0.69      2013-08-29 21:58:23 -0400
  - added an alternate idle watcher implementation
  - added MSWin32 support (via idle watcher)
  - change end line processing
    in the past we used chomp() which removed trailing $/
    but this didn't work nicely with MSWin32, instead we
    use a regex that removes \r\n, \n or \r

0.68      2013-08-23 08:38:40 -0400