@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 no warnings 'deprecated';
-BEGIN { eval q{ use EV } }
+BEGIN { $^O eq 'MSWin32' ? eval q{ use Event; 1 } || q{ use EV } : eval q{ use EV } }
 use Test::More tests => 4;
 use AnyEvent;
 use AnyEvent::Open3::Simple;
